changes added tree questions solutions

--- a/DataStructure/linked list/singly_linked_list.ipynb
+++ b/DataStructure/linked list/singly_linked_list.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
     "elementList=linkedList()\n",
     "elementList.bulkInsert([1,2,3,4])\n",
     "elementList.printElement('Before Reversing the List')\n",
-    "elementList.reverseList2()\n",
+    "elementList.reverseList()\n",
     "elementList.printElement('After Reversing the List')"
    ]
   },
@@ -1126,6 +1126,173 @@
     "while temp:\n",
     "    print(temp.val,end=\" \")\n",
     "    temp=temp.next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Palindrome Linked List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self,element=None,next=None):\n",
+    "        self.val=element\n",
+    "        self.next=next\n",
+    "class LinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.head=None\n",
+    "        self.curPtr=None\n",
+    "        self.count=0\n",
+    "        \n",
+    "    def isEmpty(self):\n",
+    "        if self.head==None:\n",
+    "            return True\n",
+    "        return False\n",
+    "    def getLength(self):\n",
+    "        return self.count\n",
+    "    \n",
+    "    def insertElement(self,element):\n",
+    "        if not self.isEmpty():\n",
+    "            itr=self.head\n",
+    "            while itr.next!=None:\n",
+    "                itr=itr.next\n",
+    "            itr.next=Node(element)\n",
+    "        else:\n",
+    "            self.head=Node(element,None)\n",
+    "    def printElement(self,statement=None):\n",
+    "        if not self.isEmpty():\n",
+    "            itr=self.head\n",
+    "            if statement:\n",
+    "                print(statement,end=\" \")\n",
+    "            while itr:\n",
+    "                print(itr.val,end=\" \")\n",
+    "                itr=itr.next\n",
+    "            print()\n",
+    "        else:\n",
+    "            print('Empty List!')\n",
+    "## __Bulk Insert Elements__ ##\n",
+    "    def bulkInsert(self,lists):\n",
+    "        if not self.isEmpty():\n",
+    "            itr=self.head\n",
+    "            while itr.next!=None:\n",
+    "                itr=itr.next\n",
+    "            for i in lists:\n",
+    "                itr.next=ListNode(i,None)\n",
+    "                itr=itr.next\n",
+    "            self.currPtr=itr\n",
+    "        else:\n",
+    "            self.head=ListNode(lists[0],None)\n",
+    "            self.count+=1\n",
+    "            itr=self.head\n",
+    "            for i in range(1,len(lists)):\n",
+    "                itr.next=ListNode(lists[i],None)\n",
+    "                self.count+=1\n",
+    "                itr=itr.next\n",
+    "            self.endPtr=itr\n",
+    "        return self.head\n",
+    "    \n",
+    "\n",
+    "    def checkPaindrome(self):\n",
+    "        slow=self.head\n",
+    "        fast=self.head\n",
+    "        while fast and fast.next:\n",
+    "            slow=slow.next\n",
+    "            fast=fast.next.next\n",
+    "        curr=slow\n",
+    "        prevPtr=None\n",
+    "        nextPtr=None\n",
+    "        while curr:\n",
+    "            nextPtr=curr.next\n",
+    "            curr.next=prevPtr\n",
+    "            prevPtr=curr\n",
+    "            curr=nextPtr\n",
+    "        check=prevPtr\n",
+    "        check2=self.head\n",
+    "        flag=False\n",
+    "        while check:\n",
+    "            if check.val==check2.val:\n",
+    "                flag=True\n",
+    "            else:\n",
+    "                flag=False\n",
+    "                break\n",
+    "            check2=check2.next\n",
+    "            check=check.next\n",
+    "        if(flag):\n",
+    "            print('is a palindrome')\n",
+    "        else:\n",
+    "            print('not a palindrome')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not a palindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "elementList=LinkedList()\n",
+    "l1=elementList.bulkInsert([1,2,2,3,1])\n",
+    "# elementList.printElement('Elements: ')\n",
+    "elementList.checkPaindrome()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merge k Sorted Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 2]\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=[[1,4,5],[1,3,4,5],[2,6]]\n",
+    "\n",
+    "## Approach 1:- The brute force approach...!!!\n",
+    "\n",
+    "# for i in range(1,len(x)):\n",
+    "#     j=0\n",
+    "#     k=0\n",
+    "#     while k!=len(x[0]) and x[i]!=[]:\n",
+    "#         if x[i][j]==x[0][k]:\n",
+    "#             x[0].insert(k,x[i].pop(j))\n",
+    "#         elif x[0][k]>=x[i][j]:\n",
+    "#             x[0].insert(k,x[i].pop(j))\n",
+    "#         k+=1\n",
+    "#     if x[i]!=[]:\n",
+    "#         x[0].extend(x[i])\n",
+    "#         x[i]=[]\n",
+    "# print(x[0])\n",
+    "\n"
    ]
   },
   {
